--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
             <h2>SKILLS</h2>
             <div class="skills-container">
                 <div class="skill">
-                    <i class="fab fa-html5" style="color: orangered;"></i>
+                    <i class="fab fa-html5" ></i>
                     <span>HTML</span>
                 </div>
                 <div class="skill">
-                    <i class="fab fa-css3-alt" style="color: blue;"></i>
+                    <i class="fab fa-css3-alt" ></i>
                     <span>CSS</span>
                 </div>
                 <div class="skill">
-                    <i class="fab fa-js" style="color: rgb(236, 236, 29);"></i>
+                    <i class="fab fa-js"></i>
                     <span>JavaScript</span>
                 </div>
                 <div class="skill">
@@ -84,11 +84,11 @@
                     <span>Bootstrap</span>
                 </div>
                 <div class="skill">
-                    <i class="fab fa-react" style="color: rgb(103, 185, 252);"></i>
+                    <i class="fab fa-react"></i>
                     <span>React</span>
                 </div>
                 <div class="skill">
-                    <i class="fa-brands fa-node" style="color: rgb(29, 236, 29);"></i>
+                    <i class="fa-brands fa-node" ></i>
                     <span>Node.js</span>
                 </div>
                 <div class="skill">
@@ -100,11 +100,11 @@
                     <span>Express.JS</span>
                 </div>
                 <div class="skill">
-                    <i class="fas fa-database" style="color:rgb(236, 181, 29);"></i>
+                    <i class="fas fa-database"></i>
                     <span>SQL</span>
                 </div>
                 <div class="skill">
-                    <i class="fab fa-python" style="color: rgb(29, 236, 29);"></i>
+                    <i class="fab fa-python"></i>
                     <span>Python</span>
                 </div>
                 <div class="skill">
