SEO and Favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Raghul Kannan | Full Stack Developer Portfolio</title>
+
+    <meta name="description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!">
+    <meta name="keywords" content="Raghul Kannan, raghulkannan,raghulkannan005, raghuldev, Full Stack Developer, Web Developer, Portfolio, Projects, Skills, Contact">
+    <meta name="author" content="Raghul Kannan">
+
+    <meta property="og:title" content="Raghul Kannan | Full Stack Developer Portfolio">
+    <meta property="og:description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!">
+    <meta property="og:url" content="https://www.raghulkannan.me">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Raghul Kannan</title>
+
     <link rel="stylesheet" href="index.css">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <div id="portfolio">
