--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Raghul Kannan | Full Stack Developer Portfolio</title>
 
     <meta name="description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!">
-    <meta name="keywords" content="Raghul Kannan, raghulkannan,raghulkannan005, raghuldev, Full Stack Developer, Web Developer, Portfolio, Projects, Skills, Contact">
+    <meta name="keywords" content="Raghul Kannan, raghul kannan developer, raghulkannan portfolio, raghul website, raghul kannan dev, raghulkannan005, raghuldev, Full Stack Developer, Web Developer, Portfolio, Projects, Skills, Contact">
     <meta name="author" content="Raghul Kannan">
 
     <meta property="og:title" content="Raghul Kannan | Full Stack Developer Portfolio">
