--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="Raghul Kannan, raghul kannan developer, raghulkannan portfolio, raghul website, raghul kannan dev, raghulkannan005, raghuldev, Full Stack Developer, Web Developer, Portfolio, Projects, Skills, Contact">
     <meta name="author" content="Raghul Kannan">
 
+    <link rel="canonical" href="https://raghulkannan.me">
+    <meta name="google-site-verification" content="Rk1s1vBAUzZk32-ITouZMu8TNo4xfc4oISsI-Z-IEKU" />
+
     <meta property="og:title" content="Raghul Kannan | Full Stack Developer Portfolio">
     <meta property="og:description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!">
     <meta property="og:url" content="https://www.raghulkannan.me">
