--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             <h2>Let's Work Together</h2>
             <p>If you like my work and have some cool projects to work on, just send me a message and let's get started!</p>
                 <div class="contact-section">
-                    <a class="mail" href="mailto:raghulkannan005@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-                    <a class="twitter" href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a class="mail" href="mailto:raghulkannan005@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a class="twitter" href="" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
                 </div>
         </div>
     </footer>
