--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Public/styles.css">
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
@@ -167,6 +167,6 @@
         </div>
     </footer>
 </body>
-<script src="script.js"></script>
+<script src="/Public/script.js"></script>
 
 </html>
