--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="projects">
             <br><br><br><br><br><br>
             <h2>PROJECTS</h2>
-            <p>Here are some of my projects. Click on the images to view the project.</p>
+            <p>These projects are for the Responsive Web Design Certification Project. I haven't updated the latest projects yet.</p>
             <div class="projects-content">
             <div class="project-tile">
                 <a class="project preview" href="/Projects/CarDeal/Cardeal.html" target="_blank"><img src="/Media/TheCarDeals_Preview.jpg" class="prev-image" alt="Car Deals Website"></a>
@@ -154,7 +154,12 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/306px-ISO_C%2B%2B_Logo.svg.png" alt="C++ logo">
                     <span>C++</span>
                 </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <span>SCSS</span>
+                </div>
             </div>
+            <center><img src="Responsive Web Design Certificate.jpg" alt="Responsive Web Design Certificate"></center>
         </div>
     <footer>
         <div id="contact">
