--- a/Pages/certifications.html
+++ b/Pages/certifications.html
@@ -37,7 +37,7 @@
                     <div class="btn2"></div>
                     <div class="btn3"></div>
                 </div>
-                <div class="xbtn hide" onclick="veliyaPo()">
+                <div class="xbtn hide">
                     <div class="xbtn1"></div>
                     <div class="xbtn2"></div>
                 </div>
@@ -131,12 +131,12 @@
                     <span>Node.js</span>
                 </div>
                 <div class="skill">
-                    <img src="https://w7.pngwing.com/pngs/846/87/png-transparent-mean-solution-stack-express-js-node-js-javascript-github-text-trademark-logo-thumbnail.png" alt="Express js logo">
-                    <span>Express.JS</span>
-                </div>
-                <div class="skill">
                     <img src="https://cdn.worldvectorlogo.com/logos/mongodb-icon-1.svg" alt="mongo db logo">
                     <span>Mongodb</span>
+                </div>
+                <div class="skill">
+                    <img src="https://w7.pngwing.com/pngs/846/87/png-transparent-mean-solution-stack-express-js-node-js-javascript-github-text-trademark-logo-thumbnail.png" alt="Express js logo">
+                    <span>Express.JS</span>
                 </div>
                 <div class="skill">
                     <i class="fas fa-database"></i>
@@ -146,7 +146,20 @@
                     <i class="fab fa-python"></i>
                     <span>Python</span>
                 </div>
+                <div class="skill">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/3/30/Java_programming_language_logo.svg" alt="Java logo">
+                    <span>Java</span>
+                </div>
+                <div class="skill">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/306px-ISO_C%2B%2B_Logo.svg.png" alt="C++ logo">
+                    <span>C++</span>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <span>SCSS</span>
+                </div>
             </div>
+
         </div>
     <footer>
         <div id="contact">
@@ -154,10 +167,11 @@
             <p>If you like my work and have some cool projects to work on, just send me a message and let's get started!</p>
                 <div class="contact-section">
                     <a class="mail" href="mailto:raghulkannan005@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a class="twitter" href="" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
                 </div>
         </div>
     </footer>
 </body>
-<script src="./Public/script.js"></script>
+<script src="/Public/script.js"></script>
 
 </html>
