--- a/Public/Projects/GSF/GymSurveyForm.html
+++ b/Public/Projects/GSF/GymSurveyForm.html
@@ -20,7 +20,7 @@
                 <input type="text" id="name" placeholder="Enter your Name:" required>
                 </div>
                 <div class="personal-inputs">
-                    <label id="email-label" for=""email>Email</label>
+                    <label id="email-label" for="email">Email</label>
                 <input type="email" id="email" placeholder="Enter your Email:" required>
                 </div>
                 <div class="personal-inputs">
