--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raghul Kannan</title>
+    <title>Raghul Kannan | Full Stack Developer Portfolio</title>
+    <meta name="description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!" />
+    <meta name="keywords" content="Raghul Kannan, Full Stack Developer, Web Developer, Portfolio, Projects, Skills, Contact" />
+    <meta name="author" content="Raghul Kannan" />
+    <meta property="og:title" content="Raghul Kannan | Full Stack Developer Portfolio" />
+    <meta property="og:description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!" />
+    <meta property="og:url" content="https://raghulkannan.me" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://raghulkannan.me/Raghulkannan005.github.io/Media/Raghul/rag-3.jpg" />
+    <link rel="icon" type="image/icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx" defer></script>
   </body>
 </html>
