--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raghul Kannan | Full Stack Developer Portfolio</title>
+    <title>Raghul Kannan | Portfolio</title>
     <meta name="description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!" />
-    <meta name="keywords" content="Raghul Kannan, Full Stack Developer, Web Developer, Portfolio, Projects, Skills, Contact" />
+    <meta name="keywords" content="Raghul Kannan,Raghul kannan website, Raghul kannan portfolio, Full Stack Developer, Web Developer, Developer Portfolio, Freelancer, raghul kannan twitter, raghul kannan instagram, raghul kannan github, raghul kannan linkedin" />
     <meta name="author" content="Raghul Kannan" />
     <meta property="og:title" content="Raghul Kannan | Full Stack Developer Portfolio" />
     <meta property="og:description" content="Raghul Kannan's portfolio - Full Stack Developer specialized in creating magical websites. Explore my projects, skills, and get in touch!" />
@@ -13,10 +13,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://raghulkannan.me/Raghulkannan005.github.io/Media/Raghul/rag-3.jpg" />
     <link rel="icon" type="image/icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"></noscript>
   </head>
   <body>
     <div id="root"></div>
